--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -66,9 +66,11 @@
     </div>
     <div class='col'>
         <h1>Spells</h1>
+        (% if spells %)
         {% for spell in spells %}
         {% include 'partials/spellcard.html' %}
         {% endfor %}
+        {% endif %}
     </div>
 </div>
 {% endblock %}
