--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -66,11 +66,11 @@
     </div>
     <div class='col'>
         <h1>Spells</h1>
-        {% if spells %}
+        <!-- {% if spells %}
         {% for spell in spells %}
         {% include 'partials/spellcard.html' %}
         {% endfor %}
-        {% endif %}
+        {% endif %} -->
     </div>
 </div>
 {% endblock %}
